# hw-kafka-client

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  LICENSE  README.md  circle.yml  default.nix  docker-compose.yml  hw-kafka-client.cabal  kafka-client.cabal  package.yaml  project.sh  shell.nix  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
example/: ConsumerExample.hs  Main.hs  ProducerExample.hs
nix/: fetchNixpkgs.nix  nixpkgs.nix  overrides.nix  sources.json
scripts/: autotag  build-docs.sh  build-librdkafka  build-librdkafka.sh  copy-docs  copy-docs.sh  fetch  hackage-docs.sh  linux-test.sh  publish  publish-docs  release  setup-cred  up  when
src/: Kafka.hs
src/Kafka/: Admin.hs  Callbacks.hs  Consumer.hs  Dump.hs  Metadata.hs  Producer.hs  Topic.hs  Transaction.hs  Types.hs
src/Kafka/Admin/: AdminProperties.hs  Types.hs
src/Kafka/Consumer/: Callbacks.hs  ConsumerProperties.hs  Convert.hs  Metadata.hs  Subscription.hs  Types.hs
src/Kafka/Consumer/Internal/: Convert.hs  Types.hs
src/Kafka/Examples/: ConsumerExample.hs  ProducerExample.hs
src/Kafka/Internal/: CancellationToken.hs  Dump.hs  Metadata.hs  RdKafka.chs  RdKafkaEnum.chs  Setup.hs  Shared.hs  Types.hs
src/Kafka/Metadata/: Types.hs
src/Kafka/Metadata/Internal/: Types.hs
src/Kafka/Producer/: Callbacks.hs  Convert.hs  ProducerProperties.hs  Types.hs
src/Kafka/Producer/Internal/: Convert.hs  Types.hs
src/Kafka/Topic/: Types.hs
tests/: TestMain.hs
tests-it/Kafka/: AdminSpec.hs  IntegrationSpec.hs  TestEnv.hs
tests/Kafka/: IntegrationSpec.hs
tests/Kafka/Consumer/: ConsumerRecordMapSpec.hs  ConsumerRecordSpec.hs  ConsumerRecordTraverseSpec.hs
