name:                kafka-client
version:             1.0.0
homepage:            https://github.com/haskell-works/kafka-client
bug-reports:         https://github.com/haskell-works/kafka-client/issues
license:             MIT
license-file:        LICENSE
author:              Alexey Raga <alexey.raga@gmail.com>
maintainer:          Alexey Raga <alexey.raga@gmail.com>
category:            Database
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Kafka bindings for Haskell
description:         Apache Kafka bindings backed by the librdkafka C library.
  .
  Features include:
  .
  * Consumer groups: auto-rebalancing consumers
  .
  * Keyed and keyless messages producing/consuming
  .
  * Batch producing messages

source-repository head
  type:     git
  location: git://github.com/haskell-works/kafka-client.git

library
  Build-tools:       c2hs
  build-depends:       base >=4.6 && < 5
                     , bytestring
                     , containers
                     , temporary
                     , unix
  exposed-modules:
    Kafka
    Kafka.Internal.RdKafka
    Kafka.Internal.RdKafkaEnum
    Kafka.Internal.Setup
    Kafka.Consumer
    Kafka.Producer
    Kafka.Metadata
    Kafka.Examples.ConsumerExample
    Kafka.Examples.ProducerExample
  other-modules:
    Kafka.Consumer.Convert
    Kafka.Consumer.Types
    Kafka.Internal.Shared
    Kafka.Metadata.Internal.Types
    Kafka.Producer.Internal.Convert
    Kafka.Producer.Internal.Types
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  include-dirs:        /usr/local/include/librdkafka
                     , /usr/include/librdkafka
  extra-lib-dirs:      /usr/local/lib
  extra-libraries:     rdkafka
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  other-modules:       Kafka.IntegrationSpec
  main-is:             Spec.hs
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.6 && < 5
                     , bytestring
                     , containers
                     , kafka-client
                     , monad-loops
                     , hspec
                     , regex-posix
                     , either
